--- a/tpBosse/tpBosse.html
+++ b/tpBosse/tpBosse.html
@@ -7,7 +7,7 @@
     <h2>IN6 - TP sur les primitives surfaciques</h2>
     <h3>Pr&eacute;milinaire</h3>
       <dl>
-        <dt> Compiler et ex&eacute;cuter <tt>Prepa.java</tt>. </dt>
+        <dt> Compiler et ex&eacute;cuter <tt>Exo.java</tt>. </dt>
         <dd> - La quille se compose d'une base d&eacute;compos&eacute;e en
           deux parties cylindriques d'&eacute;gales hauteurs et
           diam&egrave;tres : <it>LowerBase</it> et <it>UpperBase</it>,
